--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;600;700&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
